<resources>
    <string name="app_name">Birthday chat</string>
    <string name="menu_home">Home</string>
    <string name="what_do_you_want_to_post">what do you want to post ..</string>
    <string name="notification">Notifications</string>
    <string name="home">home</string>
    <string name="search">Search</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About app</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_share">Share app</string>
    <string name="menu_rate">Rate app</string>

    <string name="birthdate">BirthDate</string>

    <string name="startnow">start now</string>
    <string name="fadfadahhtext">Birthday chat app</string>
    <string name="slide1_text">It allows you to silver and remote dealing with your loved one</string>
    <string name="secend_slide_text">To be able to communicate with your friends, register with us, follow the posts of friends and send them messages</string>
    <string name="third_slid_text">Follow the posts of friends and close relatives and interact with them in your favor. Welcome</string>
    <string name="english" translatable="false">English</string>
    <string name="arabic" translatable="false">عربي</string>
    <string name="phone_or_email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="sign_in">Sign Up</string>
    <string name="don_t_have_account">Don\'t have account ?</string>
    <string name="create_account">create account</string>
    <string name="next">Next</string>
    <string name="whats_your_name">Enter Your Details</string>
    <string name="whats_your_gender">whats your gender?</string>

    <string name="first_name">First Name</string>
    <string name="goin_fadfadah">Join to Birthday chat</string>
    <string name="helpcreateaccount">We will help you to create a new account in a few simple steps</string>
    <string name="family_name">Last Name</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="what_is_your_birthday">What is your Birthday chat?</string>
    <string name="yourbirthdaytext">Please enter your true date of birth in order to be able to reach your twins and close associates of your age</string>
    <string name="minutes_ago">Minute ago</string>
    <string name="hours_ago">Hours ago</string>
    <string name="days_ago">Days ago</string>
    <string name="weeks_ago">Weeks ago</string>
    <string name="more_month">More than month</string>
    <string name="comments_by">Commented on your post</string>
    <string name="comments">Comment</string>
    <string name="liked">like</string>
    <string name="liked_by">Likes your post</string>
    <string name="friend_request">Friend Requests</string>
    <string name="confirm">Confirm</string>
    <string name="delete">Delete</string>
    <string name="sent_friend_request">Send friend request</string>
    <string name="see_all">See All</string>
    <string name="add_friend">Add Friend</string>
    <string name="cancel_request">Cancel Request</string>
    <string name="add_profile">add profile</string>
    <string name="name">Name</string>
    <string name="gender">gender</string>
    <string name="country">Country (optional)</string>
    <string name="save">Save</string>
    <string name="who_can_see_your_posts">Who can see your posts?</string>
    <string name="friends">friends</string>
    <string name="publicc">public</string>
    <string name="language">Language</string>
    <string name="setting">Setting</string>
    <string name="profile">Profile</string>
    <string name="search_for_brthdy">Find matches with your Birthday chat</string>
    <string name="you_can_register_by_entering_your_email">Email</string>
    <string name="registered_successfully_welcome">registered successfully welcome</string>
    <string name="email">Email</string>

    <string name="chat">Chat</string>
    <string-array name="langageitems">
        <item>English</item>
        <item>عربى</item>
    </string-array>
    <string name="required">Required</string>
    <string name="add_to_post">add to post</string>
    <string name="send">Send</string>
    <string name="check_email_confirm">please check your email for confirmation </string>
    <string name="unfriend">unFriend</string>
    <string name="likes_your_post">Likes your post</string>
    <string name="commented_on_your_post"> Commented on your post</string>
    <string name="your_password">Password</string>
    <string name="type_here">type here</string>
    <string name="block">Block</string>
    <string name="this_use_not_available">sorry,you can\'t reach at this moment</string>
    <string name="unblock">unblock</string>
    <string name="block_message">block messages</string>
    <string name="block_user">Block user</string>
    <string name="story">Story</string>
    <string name="Log_in">Log in</string>

    <string name="uploading_status">uploading status</string>
    <string name="no_camera">No camera on device</string>
    <string name="allow_access_camera">please allow access to camera</string>
    <string name="allow_camera_descrip">you can\'t record any videos till you allow the camera permission</string>
    <string name="goto_settings">go to settings</string>
    <string name="loading_wait">Loading. Please wait...</string>
    <string name="profile_update">Profile Updated Successfully</string>
    <string name="select_pic">Select Picture</string>
    <string name="share_app_descr">\nLet me recommend you this application\n\n</string>
    <string name="choose_one">choose one</string>
    <string name="accept_your_request">accept your request</string>
    <string name="you_are_blocking_messages">you are about to block messaging from this person</string>
    <string name="waving_to_you">waving to you</string>
    <string name="write_a_comment">write a comment...</string>
    <string name="post">Post</string>
    <string name="edit_date"><u>edit</u></string>
    <string name="just_now">Just now</string>
    <string-array name="privacyitems">
        <item>Friends</item>
        <item>public</item>
    </string-array>
    <string name="search_by_name">search by name</string>
    <string name="search_by_day">search by date</string>
    <string name="double_back_to_exit">Please click BACK again to exit</string>
    <string name="reset_password">اReset password</string>
    <string name="delete_post">Delete post ?</string>
    <string name="last_month">last month</string>
    <string name="likes_your_comment">likes your comment</string>
    <string name="record_video">Record video</string>
    <string name="upload_from_files">upload from files</string>
    <string name="city">City (optional)</string>
    <string name="about_app">-free app."\n" -Shows users who are related on the birthday."\n"
        -It allows the user to share his diary through short videos."\n"-It provides text chat, through which  is also possible to share the image, and record a voice.</string>
    <string name="delete_story">Delete story</string>
    <string name="allow_access_files">please allow files access</string>
    <string name="allow_camera_record">allow access to mic and files</string>
    <string name="explain_search">When selecting a year, results will be displayed to users whose birth coincides with that chosen year. Come on, make new friends of the same age as you.</string>
    <string name="like">Like</string>


</resources>