<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.WallFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_42sdp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/_4sdp"
            android:src="@drawable/ic_baseline_more_vert_24" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/home"
                android:textSize="14sp"
                android:textColor="@android:color/white" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorAccent" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_chat"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="14sp"
            android:text="@string/chat"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/tv_stories"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="14sp"
            android:text="@string/story"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/tv_notification"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.3"
            android:gravity="center"
            android:textSize="14sp"
            android:text="@string/notification"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/tv_search"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="14sp"
            android:text="@string/search"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:fitsSystemWindows="true"
            android:theme="@style/AppTheme.AppBarOverlay">


            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|enterAlwaysCollapsed|exitUntilCollapsed">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="@dimen/_8sdp"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="@dimen/_42sdp"
                        android:layout_height="@dimen/_38sdp"
                        android:src="@drawable/profile_img" />

                    <TextView
                        android:id="@+id/tv_add_to_post"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:layout_marginBottom="@dimen/_4sdp"
                        android:layout_weight="1"
                        android:background="@drawable/rounded_white_border_gray"
                        android:gravity="center_vertical"
                        android:paddingStart="@dimen/_12sdp"
                        android:paddingEnd="@dimen/_12sdp"
                        android:text="@string/what_do_you_want_to_post"
                        android:textColor="@android:color/black" />


                </LinearLayout>
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white_light"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView_walls"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/item_posts" />
        </FrameLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</LinearLayout>