<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"

    tools:context=".activity.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/signIn_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
android:paddingRight="50dp"
            android:paddingLeft="50dp"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"

            android:background="@drawable/rounded_button_orange"
            android:fontFamily="@font/cairo_bold"
            android:text="@string/Log_in"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/donthave_account_txt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forget_password_txt"
            app:layout_constraintVertical_bias=".8" />

        <ImageView
            android:id="@+id/imageview"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_190sdp"
            android:padding="@dimen/_20sdp"
            android:scaleType="centerInside"
            android:src="@drawable/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageview"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/_14sdp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageview">

            <Button
                android:id="@+id/english_lang"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:background="@drawable/rounded_button_white"
                android:fontFamily="@font/cairo_semibold"
                android:text="@string/english"
                android:textColor="#000"
                android:textSize="@dimen/_13sdp" />

            <Button
                android:id="@+id/arabic_lang"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:background="@drawable/rounded_button_white"
                android:fontFamily="@font/cairo_semibold"
                android:text="@string/arabic"
                android:textColor="#000"
                android:textSize="@dimen/_13sdp" />
        </LinearLayout>

        <TextView
            android:id="@+id/forget_password_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
      android:layout_marginTop="12dp"
            android:text="@string/forget_password"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintStart_toStartOf="@+id/password_textinput"
            app:layout_constraintTop_toBottomOf="@+id/password_textinput" />

        <!--
        <LinearLayout
            android:id="@+id/create_linear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/_30sdp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
-->

        <TextView
            android:id="@+id/donthave_account_txt"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_account"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp"
            android:layout_marginBottom="30dp"
            android:layout_marginStart="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/signUp_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="132dp"
            android:fontFamily="@font/cairo_bold"
            android:text="@string/create_account"
            android:textColor="@color/red"
            android:textSize="@dimen/_14sdp"
            app:layout_constraintBottom_toBottomOf="@+id/donthave_account_txt"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@+id/donthave_account_txt"
            app:layout_constraintTop_toTopOf="@+id/donthave_account_txt" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneOrMail_textinput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linear"
            android:layout_margin="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/ic_email"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linear">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phoneOrMail_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:drawablePadding="6dp"
                android:hint="@string/phone_or_email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1"

                android:padding="@dimen/_7sdp"
                android:textColor="@color/black"
                android:textSize="17sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_textinput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/phoneOrMail_textinput"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:endIconMode="password_toggle"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:startIconDrawable="@drawable/ic_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phoneOrMail_textinput">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:drawablePadding="6dp"
                android:hint="@string/password"
                android:imeOptions="actionDone"

                android:inputType="textPassword"

                android:maxLines="1"
                android:padding="@dimen/_7sdp"
                android:textColor="@color/black"
                android:textSize="17sp" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>